--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 GrowBIG - Education Webstite
 
-https://GrowBIG.org/
+https://www.GrowBIG.org/
 
 -->
      <meta charset="UTF-8">
@@ -617,7 +617,7 @@ https://GrowBIG.org/
                               <div class="copyright-text"> 
                                    <p>Copyright &copy; 2021 <a href="https://www.facebook.com/secret.burners707">@Abdul.Karim.Ronny</a></p>
                                    
-                                   <p>Design: <a href="https://www.facebook.com/secret.burners707">@Abdul.Karim.Ronny With ''Unplash & Pexels.''</a></p>
+                                   <p>Design: Abdul Karim Ronny With <a href="https://www.pexels.com/">''Pexels''.</a></p>
                               </div>
                          </div>
                     </div>
@@ -629,7 +629,7 @@ https://GrowBIG.org/
                               </div>
                               <address>
                                    <p>+880 182 5280433, +880 173 2937217</p>
-                                   <p><a href="mailto:youremail.co">abdul.karim.ronny.707@gmail.com</a></p>
+                                   <p><a href="http://www.gmail.com/ARKarim707/">abdul.karim.ronny.707@gmail.com</a></p>
                               </address>
 
                               <div class="footer_menu">
